--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,3 +23,7 @@ jobs:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: r-lib/actions/setup-renv@v2
+        with:
+          profile: '"./data/1_swiss_army_knives"'
+          cache-version: 1
