--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,14 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages:
+          any::renv
       - uses: r-lib/actions/setup-renv@v2
         with:
           profile: '"./data/1_swiss_army_knives"'
-          cache-version: 1
+          #cache-version: 1
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
