--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
           profile: '"./data/1_swiss_army_knives"'
