--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
-          profile: '"data/1_swiss_army_knives"'
+          profile: '"armyknives"'
           #working-directory: "quarto/data/1_swiss_army_knives/"
           #cache-version: 1
       - name: Set up Quarto
