--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - name: Install libcurl4_openssl_dev
+        run: sudo apt install -y libcurl4-openssl-dev
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
