--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Install libcurl4_openssl_dev
-        run: sudo apt install -y libcurl4-openssl-dev
+        run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
