--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,12 +13,13 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Install libcurl4_openssl_dev
-        run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev
+      - name: Install ubuntu dependencies
+        run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
           profile: '"armyknives"'
+          bypass-cache: never
           #working-directory: "quarto/data/1_swiss_army_knives/"
           #cache-version: 1
       - name: Set up Quarto
