--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Install ubuntu dependencies
-        run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
+        #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with: 
+          packages: libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
