--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,14 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with: 
           packages: libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev libmagick++-dev
+          version: 1.0
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
         with:
           profile: '"armyknives"'
           bypass-cache: never
           #working-directory: "quarto/data/1_swiss_army_knives/"
-          #cache-version: 1
+          cache-version: 1
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
