--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - name: Install conda environment
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-name: base
+          cache-environment: true
+          environment-file: pyenv/base/environment.yml
+          create-args: >-
+            python=3.11.9
+      - run: which python
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
         uses: awalsh128/cache-apt-pkgs-action@latest
