added python environmet

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - run: pwd
+      - run: ${{ github.workspace }}/pyenv/base/environment.yml
       - name: Install conda environment
         uses: mamba-org/setup-micromamba@v1
         with:
