--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,17 +13,17 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - run: pwd
-      - run: sudo cat ${{ github.workspace }}/pyenv/base/environment.yml
-      - name: Install conda environment
-        uses: mamba-org/setup-micromamba@v1
-        with:
-          #environment-name: base
-          cache-environment: true
-          environment-file: ${{ github.workspace }}/pyenv/base/environment.yml
-          create-args: >-
-            python=3.11.9
-      - run: which python
+      #- run: pwd
+      #- run: sudo cat ${{ github.workspace }}/pyenv/base/environment.yml
+      #- name: Install conda environment
+      #  uses: mamba-org/setup-micromamba@v1
+      #  with:
+      #    #environment-name: base
+      #    cache-environment: true
+      #    environment-file: ${{ github.workspace }}/pyenv/base/environment.yml
+      #    create-args: >-
+      #      python=3.11.9
+      #- run: which python
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
         uses: awalsh128/cache-apt-pkgs-action@latest
