--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,16 +13,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      #- run: pwd
-      #- run: sudo cat ${{ github.workspace }}/pyenv/base/environment.yml
-      #- name: Install conda environment
-      #  uses: mamba-org/setup-micromamba@v1
-      #  with:
-      #    #environment-name: base
-      #    cache-environment: true
-      #    environment-file: ${{ github.workspace }}/pyenv/base/environment.yml
-      #    create-args: >-
-      #      python=3.11.9
+      - run: pwd
+      - run: sudo cat ${{ github.workspace }}/pyenv/base/environment.yml
+      - name: Install conda environment
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          auto-update-conda: true
+          activate-environment: pdalenv
+          environment-file: pyenv/base/environment.yml
+          #auto-activate-base: false
       #- run: which python
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
