added python environmet

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Install conda environment
         uses: conda-incubator/setup-miniconda@v3
         with:
-          auto-update-conda: true
+          #auto-update-conda: true
           channels: conda-forge, spyder-ide
           channel-priority: flexible
-          activate-environment: pdalenv
+          #activate-environment: pdalenv
           environment-file: pyenv/base/environment.yml
           #auto-activate-base: false
       #- run: which python
