--- a/pyenv/base/environment.yml
+++ b/pyenv/base/environment.yml
@@ -1,239 +1,142 @@
-name: pdalenv
+name: baseline
 channels:
-  - conda-forge
   - defaults
 dependencies:
+  - attrs=23.1.0
   - blas=1.0
   - blosc=1.21.3
   - boost-cpp=1.82.0
   - bottleneck=1.3.7
+  - branca=0.6.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2024.9.24
   - cairo=1.16.0
-  - ceres-solver=2.1.0
-  - cfitsio=4.2.0
-  - cloudpickle=3.0.0
+  - certifi=2024.8.30
+  - cfitsio=3.470
+  - charset-normalizer=3.3.2
+  - click=8.1.7
+  - click-plugins=1.1.1
+  - cligj=0.7.2
   - colorama=0.4.6
-  - console_shortcut=0.1.1
-  - curl=8.9.1
-  - draco=1.5.6
-  - eigen=3.3.7
+  - contourpy=1.2.0
+  - cycler=0.11.0
   - expat=2.6.3
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=2.001
-  - font-ttf-source-code-pro=2.030
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
-  - fonts-anaconda=1
-  - fonts-conda-ecosystem=1
+  - fiona=1.9.5
+  - folium=0.14.0
+  - fontconfig=2.14.1
+  - fonttools=4.51.0
   - freetype=2.12.1
-  - freexl=1.0.6
+  - freexl=2.0.0
   - gdal=3.6.2
-  - geos=3.11.1
-  - geotiff=1.7.1
-  - gettext=0.22.5
-  - gettext-tools=0.22.5
-  - gflags=2.2.2
-  - glib=2.78.1
-  - glib-tools=2.78.1
-  - glog=0.5.0
-  - hdf4=4.2.15
-  - hdf5=1.12.2
+  - geopandas=0.14.2
+  - geopandas-base=0.14.2
+  - geos=3.8.0
+  - geotiff=1.7.0
+  - glib=2.78.4
+  - glib-tools=2.78.4
+  - hdf4=4.2.13
+  - hdf5=1.12.1
   - icc_rt=2022.1.0
-  - icu=70.1
+  - icu=73.1
+  - idna=3.7
   - intel-openmp=2023.1.0
+  - jinja2=3.1.4
   - joblib=1.4.2
   - jpeg=9e
   - kealib=1.5.0
-  - krb5=1.21.2
-  - lcms2=2.14
-  - lerc=4.0.0
-  - libaec=1.0.6
-  - libasprintf=0.22.5
-  - libasprintf-devel=0.22.5
-  - libblas=3.9.0
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.12
+  - lerc=3.0
   - libboost=1.82.0
-  - libcblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=14.0.6
+  - libclang13=14.0.6
   - libcurl=8.9.1
   - libdeflate=1.17
-  - libexpat=2.6.3
   - libffi=3.4.4
   - libgdal=3.6.2
-  - libgettextpo=0.22.5
-  - libgettextpo-devel=0.22.5
-  - libglib=2.78.1
-  - libiconv=1.17
-  - libintl=0.22.5
-  - libintl-devel=0.22.5
+  - libglib=2.78.4
+  - libiconv=1.16
   - libkml=1.3.0
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
   - libnetcdf=4.8.1
   - libpng=1.6.39
-  - libpq=15.7
-  - librttopo=1.1.0
-  - libspatialite=5.0.1
-  - libsqlite=3.46.1
+  - libpq=12.17
+  - libspatialindex=1.9.3
+  - libspatialite=5.1.0
   - libssh2=1.11.0
-  - libtiff=4.5.0
+  - libtiff=4.5.1
   - libwebp-base=1.3.2
   - libxml2=2.13.1
-  - libzip=1.9.2
-  - libzlib=1.2.13
-  - llvmlite=0.43.0
+  - libzip=1.8.0
   - lz4-c=1.9.4
-  - m2w64-gcc-libgfortran=5.3.0
-  - m2w64-gcc-libs=5.3.0
-  - m2w64-gcc-libs-core=5.3.0
-  - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757
-  - mkl=2023.2.0
+  - mapclassify=2.5.0
+  - markupsafe=2.1.3
+  - matplotlib=3.9.2
+  - matplotlib-base=3.9.2
+  - minizip=4.0.3
+  - mkl=2023.1.0
   - mkl-service=2.4.0
   - mkl_fft=1.3.10
   - mkl_random=1.2.7
-  - msys2-conda-epoch=20160418
-  - nitro=2.7.dev6
-  - numba=0.60.0
+  - networkx=3.3
   - numexpr=2.8.7
   - numpy=1.26.4
   - numpy-base=1.26.4
   - openjpeg=2.5.2
-  - openssl=3.3.1
+  - openssl=3.0.15
+  - packaging=24.1
   - pandas=2.2.2
-  - pcre2=10.40
-  - pdal=2.5.1
+  - pcre2=10.42
+  - pillow=10.4.0
   - pip=24.2
   - pixman=0.40.0
+  - ply=3.11
   - poppler=22.12.0
   - poppler-data=0.4.11
-  - postgresql=15.7
-  - proj=9.1.1
+  - proj=9.3.1
   - pybind11-abi=5
-  - python=3.11.9
+  - pyparsing=3.1.2
+  - pyproj=3.6.1
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - pysocks=1.7.1
+  - python=3.12.7
   - python-dateutil=2.9.0post0
   - python-tzdata=2023.3
-  - python_abi=3.11
   - pytz=2024.1
+  - qhull=2020.2
+  - qt-main=5.15.2
+  - requests=2.32.3
+  - rtree=1.0.1
   - scikit-learn=1.5.1
   - scipy=1.13.1
   - setuptools=75.1.0
-  - shap=0.46.0
+  - shapely=2.0.5
+  - sip=6.7.12
   - six=1.16.0
-  - slicer=0.0.8
-  - snappy=1.2.1
   - sqlite=3.45.3
-  - suitesparse=7.0.1
   - tbb=2021.8.0
   - threadpoolctl=3.5.0
-  - tiledb=2.13.2
+  - tiledb=2.3.3
   - tk=8.6.14
-  - tqdm=4.66.5
+  - tornado=6.4.1
   - tzdata=2024b
-  - ucrt=10.0.20348.0
+  - unicodedata2=15.1.0
   - uriparser=0.9.7
+  - urllib3=2.2.3
   - vc=14.40
-  - vc14_runtime=14.40.33810
-  - vs2015_runtime=14.40.33810
+  - vs2015_runtime=14.40.33807
   - wheel=0.44.0
+  - win_inet_pton=1.1.0
   - xerces-c=3.2.4
+  - xyzservices=2022.9.0
   - xz=5.4.6
   - zlib=1.2.13
   - zstd=1.5.5
-  - pip:
-      - anyio==3.6.2
-      - argon2-cffi==21.3.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.2.3
-      - asttokens==2.2.1
-      - attrs==22.2.0
-      - backcall==0.2.0
-      - beautifulsoup4==4.11.2
-      - bleach==6.0.0
-      - cffi==1.15.1
-      - comm==0.1.2
-      - contourpy==1.0.7
-      - cycler==0.11.0
-      - cypari==2.4.1
-      - debugpy==1.6.6
-      - decorator==5.1.1
-      - defusedxml==0.7.1
-      - executing==1.2.0
-      - fastjsonschema==2.16.2
-      - fonttools==4.38.0
-      - fqdn==1.5.1
-      - fxrays==1.3.5
-      - idna==3.4
-      - ipykernel==6.21.1
-      - ipython==8.9.0
-      - ipython-genutils==0.2.0
-      - ipywidgets==8.0.4
-      - isoduration==20.11.0
-      - jedi==0.18.2
-      - jinja2==3.1.2
-      - jsonpointer==2.3
-      - jsonschema==4.17.3
-      - jupyter==1.0.0
-      - jupyter-client==8.0.2
-      - jupyter-console==6.4.4
-      - jupyter-core==5.2.0
-      - jupyter-events==0.6.3
-      - jupyter-server==2.2.1
-      - jupyter-server-terminals==0.4.4
-      - jupyterlab-pygments==0.2.2
-      - jupyterlab-widgets==3.0.5
-      - kiwisolver==1.4.4
-      - knot-floer-homology==1.2
-      - markupsafe==2.1.2
-      - matplotlib==3.6.3
-      - matplotlib-inline==0.1.6
-      - mistune==2.0.5
-      - nbclassic==0.5.1
-      - nbclient==0.7.2
-      - nbconvert==7.2.9
-      - nbformat==5.7.3
-      - nest-asyncio==1.5.6
-      - networkx==3.0
-      - notebook==6.5.2
-      - notebook-shim==0.2.2
-      - packaging==23.0
-      - pandocfilters==1.5.0
-      - parso==0.8.3
-      - pickleshare==0.7.5
-      - pillow==9.4.0
-      - platformdirs==3.0.0
-      - plink==2.4.1
-      - prometheus-client==0.16.0
-      - prompt-toolkit==3.0.36
-      - psutil==5.9.4
-      - pure-eval==0.2.2
-      - pycparser==2.21
-      - pygments==2.14.0
-      - pyparsing==3.0.9
-      - pypng==0.20220715.0
-      - pyrsistent==0.19.3
-      - python-json-logger==2.0.4
-      - pywin32==305
-      - pywinpty==2.0.10
-      - pyyaml==6.0
-      - pyzmq==25.0.0
-      - qtconsole==5.4.0
-      - qtpy==2.3.0
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - send2trash==1.8.0
-      - snap==0.5
-      - snappy-manifolds==1.1.2
-      - sniffio==1.3.0
-      - soupsieve==2.3.2.post1
-      - stack-data==0.6.2
-      - terminado==0.17.1
-      - tinycss2==1.2.1
-      - tornado==6.2
-      - traitlets==5.9.0
-      - uri-template==1.2.0
-      - wcwidth==0.2.6
-      - webcolors==1.12
-      - webencodings==0.5.1
-      - websocket-client==1.5.1
-      - widgetsnbextension==4.0.5
-prefix: C:\Users\dydgn\anaconda3\envs\pdalenv
+#prefix: C:\Users\dydgn\anaconda3\envs\baseline
