--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
       - name: Cache conda
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         env:
           # Increase this value to reset cache if etc/example-environment.yml has not changed
           CACHE_NUMBER: 0
@@ -33,6 +33,7 @@ jobs:
           #auto-activate-base: false
           use-only-tar-bz2: true
       - run: |
+          conda init bash
           conda activate baseline
           which python
       - name: Install ubuntu dependencies
