conda activate env test

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
           use-only-tar-bz2: true
       - run: |
           conda init bash
-          source ~./bashrc
+          source /home/runner/.bashrc
           conda activate baseline
           which python
       - name: Install ubuntu dependencies
