--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        
       - name: Cache conda
         uses: actions/cache@v4
         env:
@@ -22,6 +23,7 @@ jobs:
           path: ~/conda_pkgs_dir
           key:
             ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('pyenv/base/environment.yml') }}
+
       - name: Install conda environment
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -32,24 +34,32 @@ jobs:
           activate-environment: baseline
           #auto-activate-base: false
           use-only-tar-bz2: true
-      - run: |
+
+      - name: activate conda environment
+        run: |
           conda init bash
           source /home/runner/.bashrc
           conda activate baseline
           which python
+
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
         uses: awalsh128/cache-apt-pkgs-action@latest
         with: 
           packages: libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev libmagick++-dev
           version: 1
-      - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-renv@v2
+
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install R dependency
+        uses: r-lib/actions/setup-renv@v2
         with:
           profile: '"armyknives"'
           #bypass-cache: never
           #working-directory: "quarto/data/1_swiss_army_knives/"
           cache-version: 2
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
