--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: activate conda environment
         run: |
+          which micromamba
+          micromamba activate baseline
           which python
 
       - name: Install R
