--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,8 @@ jobs:
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
+      - name: Quarto render
+        run: quarto publish gh-pages
       
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
