quarto freeze test

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,7 +61,8 @@ jobs:
           git diff
           git config --global user.name 'YONGHUNI'
           git config --global user.email 'dydgns0556@gmail.com'
-          git commit -am "Quarto Freeze by GH actions"
+          git add _freeze
+          git commit m "Quarto Freeze by GH actions"
           git push
       
       - name: Render and Publish
