enabled lazy loading for giscus

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,6 +32,7 @@ website:
   comments: 
     giscus: 
       repo: YONGHUNI/blog
+      loading: lazy
       theme:
         light: light
         dark: cobalt
