--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   favicon: ./data/_quarto/favicon/geography-icon.png
   page-footer:
     left: "Powered by [Quarto](https://quarto.org/) <?quarto.version?>"
+    right: "Made with ❤️ by [YONGHUNI](about.qmd)"
   navbar:
     left:
       - text: News
