--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,9 +57,10 @@ jobs:
       
       - name: Push Quarto freeze
         run: |
+          ls -lrt
           git config --global user.name 'YONGHUNI'
           git config --global user.email 'dydgns0556@gmail.com'
-          git diff-index --quiet --cached HEAD || (git add _freeze && git commit -m "Quarto Freeze by GH actions" && git push)
+          git diff-index --quiet --cached HEAD || (git add _freeze && git commit -m "[BOT]Quarto Freeze by GH actions" && git push)
       
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
