--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Install R
         uses: r-lib/actions/setup-r@v2
+        with:
+          Ncpus: '4'
 
       - name: Install R dependency
         uses: r-lib/actions/setup-renv@v2
