fix: freeze target

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
       - name: Quarto render - to inspect rendering cache
-        run: quarto render . --use-freezer
+        run: quarto render ./posts/ --use-freezer
       
       - name: Push Quarto render cache if diff detected
         run: |
