--- a/about/_metadata.yml
+++ b/about/_metadata.yml
@@ -8,4 +8,4 @@ include-in-header: ./../misc/giscus-mode-toggle.html
 include-after-body: ./../misc/div-giscus.html
 
 # Enable banner style title blocks
-title-block-banner: true
+#title-block-banner: true
