--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
       
       - name: install quarto dependency
-        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
+        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt && Rscript -e "install.packages("shinylive", repos='https://cran.rstudio.com')"
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
