--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,13 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          Ncpus: '4'
+
+      - run: Rscript -e "gitcreds::gitcreds_set('https://github.com/posit-dev/r-shinylive')"
+
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
         uses: awalsh128/cache-apt-pkgs-action@latest
@@ -39,11 +46,6 @@ jobs:
           micromamba activate baseline
           which python
 
-      - name: Install R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          Ncpus: '4'
-
       - name: Install R dependency
         uses: r-lib/actions/setup-renv@v2
         with:
@@ -56,7 +58,7 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
       
       - name: install quarto dependency
-        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt && Rscript -e "devtools::install_github('https://github.com/posit-dev/r-shinylive')"
+        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
