--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,13 +15,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Install R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          Ncpus: '4'
-
-      - run: Rscript -e "gitcreds::gitcreds_set('https://github.com/posit-dev/r-shinylive')"
-
       - name: Install ubuntu dependencies
         #run: sudo apt install -y libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libudunits2-dev libgdal-dev
         uses: awalsh128/cache-apt-pkgs-action@latest
@@ -45,20 +38,28 @@ jobs:
           eval "$(micromamba shell hook --shell bash)"
           micromamba activate baseline
           which python
-
-      - name: Install R dependency
-        uses: r-lib/actions/setup-renv@v2
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
         with:
-          profile: '"armyknives"'
-          #bypass-cache: never
-          #working-directory: "quarto/data/1_swiss_army_knives/"
-          cache-version: 2
+          Ncpus: '4'
+
+      - name: Install shinylive
+        run: |
+          Rscript -e "install.packages('shinylive')"
+
+#      - name: Install R dependency
+#        uses: r-lib/actions/setup-renv@v2
+#        with:
+#          profile: '"armyknives"'
+#          #bypass-cache: never
+#          #working-directory: "quarto/data/1_swiss_army_knives/"
+#          cache-version: 2
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
-      - name: install quarto dependency
-        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
+#      - name: install quarto dependency
+#        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
@@ -78,3 +79,4 @@ jobs:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
