--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,17 +43,17 @@ jobs:
         with:
           Ncpus: '4'
 
+      - name: Install R dependency
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          profile: '"armyknives"'
+          #bypass-cache: never
+          #working-directory: "quarto/data/1_swiss_army_knives/"
+          cache-version: 2
+
       - name: Install shinylive
         run: |
           Rscript -e "install.packages('shinylive')"
-
-#      - name: Install R dependency
-#        uses: r-lib/actions/setup-renv@v2
-#        with:
-#          profile: '"armyknives"'
-#          #bypass-cache: never
-#          #working-directory: "quarto/data/1_swiss_army_knives/"
-#          cache-version: 2
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
