post(new): shinylive & quartolive

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
     permissions:
-      #actions: write
+      actions: write
       contents: write
     steps:
       - name: Check out repository
@@ -64,7 +64,7 @@ jobs:
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
       - name: Quarto render - to inspect rendering cache
-        run: quarto render ./posts/ --use-freezer
+        run: sudo quarto render ./posts/ --use-freezer
       
       - name: Push Quarto render cache if diff detected
         run: |
