debug: shinylive in quarto

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,20 +51,19 @@ jobs:
           #working-directory: "quarto/data/1_swiss_army_knives/"
           cache-version: 2
 
-      - name: Install shinylive
-        run: |
-          Rscript -e "install.packages('shinylive')"
-
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
-#      - name: install quarto dependency
-#        run: quarto add quarto-ext/shinylive --no-prompt && quarto add r-wasm/quarto-live --no-prompt
+      - name: check Quarto
+        run: (which quarto && quarto --version && quarto pandoc --version) || echo "no quarto detected"
+      
+      - name: install quarto dependency
+        run: quarto add quarto-ext/shinylive --no-prompt #&& quarto add r-wasm/quarto-live --no-prompt
 
         #- name: Install quarto extension
         #run: quarto install --no-prompt extension schochastics/academicons
       - name: Quarto render - to inspect rendering cache
-        run: sudo quarto render ./posts/ --use-freezer
+        run: quarto render ./posts/ --use-freezer
       
       - name: Push Quarto render cache if diff detected
         run: |
