debug: shinylive in quarto

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,8 +55,12 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
       
       - name: check Quarto
-        run: (which quarto && quarto --version && quarto pandoc --version) || echo "no quarto detected"
-      
+        run: |
+          (which R && which Rscript) || which Rscript || echo "check R path again"
+          Rscript -e '.libPaths()'
+          quarto check
+          (which quarto && quarto --version && quarto pandoc --version) || echo "no quarto detected"
+
       - name: install quarto dependency
         run: quarto add quarto-ext/shinylive --no-prompt #&& quarto add r-wasm/quarto-live --no-prompt
 
